--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -113,7 +113,7 @@
                             <img src="@appDomain@item.Image" width="263px" height="270px" alt="post">
                             <a href="#" class="btn theme_btn button_hover">@Localizer["BookNow"]</a>
                         </div>
-                        <a href="#"><h4 class="sec_h4">@item.Name</h4></a>
+                        <a href="/list-room/@item.Id"><h4 class="sec_h4">@item.Name</h4></a>
                     </div>
                 </div>
             }
